--- a/build web/index.html
+++ b/build web/index.html
@@ -66,9 +66,9 @@
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
   apiKey: "AIzaSyDazVumxRakZRbA8Gea7M3Wofb011z1Y2o",
-  authDomain: "projectk-a7a59.firebaseapp.com",
-  projectId: "projectk-a7a59",
-  storageBucket: "projectk-a7a59.appspot.com",
+  authDomain: "irshaad.firebaseapp.com",
+  projectId: "irshaad",
+  storageBucket: "irshaad.appspot.com",
   messagingSenderId: "896415309279",
   appId: "1:896415309279:web:fc47354d75577b1ab2f86a",
   measurementId: "G-DF6XL37N3W"
